--- a/Frontend/src/app/components/admin/user-details/user-details.component.html
+++ b/Frontend/src/app/components/admin/user-details/user-details.component.html
@@ -19,7 +19,8 @@
           <td>{{ user.fullname }}</td>
           <td>{{ user.email }}</td>
           <td>{{ user.username }}</td>
-          <!-- <td class="td-btn"><button (click)="disable(user.userID)">DISABLE</button></td> -->
+          <!-- <td class="td-btn"><button (click)="disable(user)">DISABLE</button></td> -->
+          <td class="td-btn"><button (click)="deleteUser(user)">DISABLE</button></td>
         </tr>
 
       </table>
