--- a/Frontend/src/app/components/user/question-list/question-list.component.css
+++ b/Frontend/src/app/components/user/question-list/question-list.component.css
@@ -1,110 +1,124 @@
  * {
-    margin: 0px;
-    padding: 0px;
-}
+     margin: 0px;
+     padding: 0px;
+ }
 
-.container{
-    margin-left: 100px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-}
+ .container {
+     margin-left: 100px;
+     width: 100%;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     gap: 20px;
+ }
+
+ .logo {
+     width: 50px;
+ }
+
+ .navbar {
+     display: flex;
+     justify-content: space-around;
+ }
+
+ .links {
+     display: flex;
+     justify-content: space-around;
+     width: 450px;
+     /* background-color: red; */
+ }
 
 
+ .content {
+     background-color: rgba(221, 221, 221, 255);
+     display: flex;
+     flex-direction: column;
+     justify-content: flex-start;
+     align-items: center;
+     gap: 2rem;
+     width: 100vw;
+     height: 500vh;
+ }
 
+ .question {
+     background-color: white;
+     border-radius: 1rem;
+     padding: 1rem;
+     width: 100%;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     gap: 20px;
+     margin-top: 20px;
+ }
 
-.content {
-    background-color: rgba(221, 221, 221, 255);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 2rem;
-    width: 100vw;
-    height: 500vh;
-}
+ .votes {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     gap: 0.5rem;
+ }
 
-.question {
-    background-color: white;
-    border-radius: 1rem;
-    padding: 1rem;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-}
+ .votesIcons {
+     width: 50px;
+ }
 
-.votes {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5rem;
-}
+ .votesIcons:hover {
+     opacity: 50%;
+ }
 
-.votesIcons {
-    width: 50px;
-}
+ .questionContent {
+     width: 800px;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     gap: 2rem;
+ }
 
-.votesIcons:hover {
-    opacity: 50%;
-}
+ .description {
+     text-align: center;
+ }
 
-.questionContent {
-    width: 800px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-}
+ .summary:hover {
+     color: rgba(110, 110, 238, 255);
 
-.description {
-    text-align: center;
-}
+ }
 
-.summary:hover {
-    color: rgba(110, 110, 238, 255);
+ .viewQuestion {
+     display: flex;
+     align-items: center;
+     gap: 10rem;
+ }
 
-}
+ .answer {
+     display: flex;
+ }
 
-.viewQuestion {
-    display: flex;
-    align-items: center;
-    gap: 10rem;
-}
+ .buttons {
+     display: flex;
+     justify-content: space-around;
+     gap: 20px;
+ }
 
-.answer {
-    display: flex;
-}
+ button {
+     color: white;
+     background-color: rgba(110, 110, 238, 255);
+     padding: 0.5rem;
+     border: transparent;
+     border-radius: 0.5rem;
+     text-align: center;
+ }
 
-.buttons {
-    display: flex;
-    justify-content: space-around;
-    gap: 20px;
-}
+ button:hover {
+     background-color: black;
 
-button {
-    color: white;
-    background-color: rgba(110, 110, 238, 255);
-    padding: 0.5rem;
-    border: transparent;
-    border-radius: 0.5rem;
-    text-align: center;
-}
+ }
 
-button:hover {
-    background-color: black;
-
-}
-
-.tag{
-    background-color: rgba(110, 110, 238, 255);
-    padding: 5px;
-    width: 50px;
-    text-align: center;
-} 
+ .tag {
+     background-color: rgba(110, 110, 238, 255);
+     padding: 5px;
+     width: 50px;
+     text-align: center;
+ }
